# freecc-relay

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: admin_ui.rs  auth.rs  main.rs  pairing.rs  sessions.rs  telegram.rs  web_ui.rs
