[package]
name = "freecc-relay"
version = "1.0.0"
edition = "2021"
description = "Self-hosted remote relay server for Free CC"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
form_urlencoded = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
